# obfuscator-ng

./: .gitignore  .gitmodules  README.md
obfuscator/: CMakeLists.txt  Obfuscator-ng.cpp
obfuscator/include/: ApiHashing.h  ArrayObfuscation.h  ConstObfuscation.h  Flattening.h  SplitBasicBlock.h  SubstitutionPass.h  SwapOps.h  Utils.h
obfuscator/lib/: ApiHashing.cpp  ArrayObfuscation.cpp  ConstObfuscation.cpp  Flattening.cpp  SplitBasicBlocks.cpp  SubstitutionPass.cpp  SwapOps.cpp  Utils.cpp
obfuscator/test/: CMakeLists.txt  README.md  compile_example.sh  httpsRS.c  listener_httpsRS.py  test.c  windows.c
obfuscator/test/WindowsTools/: APIResolver.c  APIResolver.cpp  Callback.asm  Callback.h  PatternSearch.cpp  PatternSearch.h  ProxyCallbacks.cpp  ProxyCallbacks.h  TokenRegistry.cpp  TokenRegistry.h  decoder.c  httpsRS.c  listener_httpsRS.py
obfuscator/test/compile_examples/: build.sh  compile_mimikatz.sh
